Fixed navigation on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {
   flex-direction: column;
   background-color: #f8f9fa; 
   background-image: 
-    linear-gradient(45deg, #e5b7b7 1px, transparent 1px),
-    linear-gradient(-45deg, #8d5050 1px, transparent 1px);
+    linear-gradient(45deg, #edd0d0 1px, transparent 1px),
+    linear-gradient(-45deg, #edd0d0 1px, transparent 1px);
   background-size: 40px 40px;
   background-repeat: repeat;
 }
